feat: i18n varibale and dev refresh

--- a/public/locales/en_US/common.json
+++ b/public/locales/en_US/common.json
@@ -1,3 +1,6 @@
 {
-  "lib": "next-i18n lib"
+  "lib": "next-i18n lib",
+  "watch.name": "watch:{{name}}",
+  "sweet": "sweet",
+  "simple": "simple"
 }
